[tool.poetry]
name = "classification"
version = "0.1.0"
description = ""
authors = ["Guillaume Chacun <guillaume.chacun@heig-vd.ch>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tensorboard = "^2.13.0"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
torchvision = {version = "^0.16.0+cu118", source = "pytorch"}
torchsummary = "^1.5.1"
scikit-image = "^0.22.0"
onnx = "^1.15.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
