[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Chacun Guillaume <guillaume.chacun@heig-vd.ch>"]
readme = "README.md"
packages = [{include = "partial_inference"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
pandas = "^2.1.0"
onnx = "^1.14.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
